tag <pre> Indica que su contenido esta preformateado y que este formato debe ser preservado

--- a/tag.html
+++ b/tag.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,8 @@
     </header>
     <!-- main  -->
     <main>
-
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, aliquam, magnam atque iste fuga quo <pre>Indica que su contenido esta preformateado y que este formato debe ser preservado.</pre> debitis quas quos placeat eius ipsum vel minus culpa soluta impedit esse corrupti expedita eveniet.</p>
+        
     </main>
     <!-- footer  -->
     <footer>
