Representa una contenido citado desde otra fuente

--- a/tag.html
+++ b/tag.html
@@ -13,7 +13,13 @@
     </header>
     <!-- main  -->
     <main>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, aliquam, magnam atque iste fuga quo <pre>Indica que su contenido esta preformateado y que este formato debe ser preservado.</pre> debitis quas quos placeat eius ipsum vel minus culpa soluta impedit esse corrupti expedita eveniet.</p>
+        <h1>Tag HTML que no conozco</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, aliquam, magnam atque iste fuga quo <pre> <strong>&lt;pre &gt;</strong> Indica que su contenido esta preformateado y que este formato debe ser preservado.</pre> debitis quas quos placeat eius ipsum vel minus culpa soluta impedit esse corrupti expedita eveniet.</p>
+        <br>
+
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <q> <strong>&lt;blockquote&gt; Representa una contenido citado desde otra fuente.</q></strong> Repellat sequi totam at et atque ut suscipit ipsa doloribus voluptas voluptate explicabo, aut consectetur reprehenderit labore non, ea accusamus recusandae vitae.
+        </p>
         
     </main>
     <!-- footer  -->
