--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 </head>
 <body>
     <header>
-
+        <a href="#">logo</a>
+        <nav>
+            <ul>
+                <li><a href="">Inicio</a></li>
+            </ul>
+            <ul>
+                <li><a href=""></a>Nostros</li>
+            </ul>
+            <ul>
+                <li><a href=""></a>Contacto</li>
+            </ul>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
