<figure> Representa la leyenda de una figura.

--- a/tag.html
+++ b/tag.html
@@ -20,6 +20,9 @@
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. <q> <strong>&lt;blockquote&gt; Representa una contenido citado desde otra fuente.</q></strong> Repellat sequi totam at et atque ut suscipit ipsa doloribus voluptas voluptate explicabo, aut consectetur reprehenderit labore non, ea accusamus recusandae vitae.
         </p>
+
+        <img src="https://picsum.photos/200/300" alt="hermosa paisaje">
+        <figcaption>Representa la leyenda de una figura.</figcaption>
         
     </main>
     <!-- footer  -->
